[gd_scene load_steps=6 format=3 uid="uid://c5hcjdqvu510h"]

[ext_resource type="PackedScene" uid="uid://v4n6r5wftqum" path="res://Assets/models/BubbleIsland/bubble_island.glb" id="1_5f2hi"]
[ext_resource type="Script" path="res://Scripts/bubble_island.gd" id="2_f8ox0"]
[ext_resource type="PackedScene" uid="uid://d1vam8tkh5r8j" path="res://Assets/models/hands/r_hard_open.glb" id="3_kn01o"]
[ext_resource type="AudioStream" uid="uid://d3bplkiwto0po" path="res://Assets/Audio/sfx/bubblePop.ogg" id="4_jorqg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_crd54"]
radius = 70.0308

[node name="bubble" instance=ExtResource("1_5f2hi")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
script = ExtResource("2_f8ox0")
text_to_display = "wow"
amp = 0.001

[node name="Sketchfab_model" parent="." index="0"]
transform = Transform3D(-0.447759, -0.894154, -3.90847e-08, 0, -4.37114e-08, 1, -0.894154, 0.447759, 1.95722e-08, 0, 0, 0)

[node name="esfera_vidro_0" parent="Sketchfab_model/585504f27cc247f8b8945af6066ca5d2_fbx/RootNode/esfera" index="0"]
transform = Transform3D(1.03057, 3.55271e-15, -5.96046e-08, 3.55271e-15, 1, 7.99361e-15, 8.9407e-08, 8.88178e-16, 1.01531, 0, 0, 0)
transparency = 0.75

[node name="mar1" parent="Sketchfab_model/585504f27cc247f8b8945af6066ca5d2_fbx/RootNode" index="4"]
transform = Transform3D(0.976642, 0, 2.98023e-08, 0, 1, -2.66454e-15, -2.98023e-08, -3.55271e-15, 0.976642, -4.44089e-16, 0.304401, -2.22045e-15)

[node name="mar1_mar_0" parent="Sketchfab_model/585504f27cc247f8b8945af6066ca5d2_fbx/RootNode/mar1" index="0"]
transform = Transform3D(1, 0, 8.9407e-08, 1.77636e-15, 1, -8.88178e-16, -8.9407e-08, -6.21725e-15, 1, 0, 0, 0)
transparency = 0.38

[node name="Area3D" type="Area3D" parent="." index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("SphereShape3D_crd54")

[node name="hand" parent="." index="2" instance=ExtResource("3_kn01o")]
transform = Transform3D(22.6237, 86.8252, -44.1537, 17.6079, 40.937, 89.5216, 95.8026, -28.0277, -6.0266, 0.0431255, -19.6008, 0.478774)
visible = false

[node name="text" type="Label3D" parent="." index="3"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
visible = false
billboard = 1
text = "Test Text"

[node name="BubblePop" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("4_jorqg")

[node name="Light" type="OmniLight3D" parent="." index="5"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 2.42154, 0)
light_color = Color(0, 0.901961, 0.905882, 1)
light_energy = 0.15
shadow_enabled = true
omni_range = 2.5
omni_attenuation = 0.535884

[node name="RayCast3D" type="RayCast3D" parent="." index="6"]
transform = Transform3D(-4.37114e-06, -100, 0, 100, -4.37114e-06, 0, 0, 0, 100, -69.6492, 0, 0)
enabled = false
target_position = Vector3(0, -0.5, 0)
debug_shape_thickness = 3

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
